--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -fpermissive -fPIC")
 SET(CMAKE_CXX_FLAGS_DEBUG "-g -fpermissive -fPIC")
 # ビルドのタイプはリリース
 SET(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE_Debug)
+
+#set(CMAKE_CXX_FLAGS "$(CMAKE_CXX_FLAGS) -fpermissive")
 
 SET(CMAKE_INSTALL_PREFIX=/usr/local)
 # プロジェクト名
